syntax = "proto3";

package aliyun;

service Aliyun {
    // 处理请求
    rpc ProcessCommonRequest(Request) returns (Response) {}
}


message Request{
    string method = 1;
    string scheme = 2;
    string domain = 3;
    string version = 5;
    string api_name = 6;
    map<string, string> query_params = 7;
}

message Response {
}